# clox

./: .clang-format  .clang-tidy  .clangd  AGENTS.md  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  justfile  test.lox
.github/workflows/: ci.yml  run-clang-format.yml
app/: main.cpp
core/: CMakeLists.txt
core/lox/ast/: expr.hpp  parse.cpp  parse.hpp  stmt.hpp
core/lox/syntax/: lex.cpp  lex.hpp  location.hpp  token.cpp  token.hpp
core/lox/vm/: chunk.cpp  chunk.hpp  common.hpp  compile.cpp  compile.hpp  value.hpp  vm.cpp  vm.hpp
tests/: CMakeLists.txt
tests/ast/: parser_tests.cpp
tests/syntax/: syntax_tests.cpp
